--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -3970,7 +3970,8 @@ input[type="button"].btn-block {
   -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 0.5rem 1rem;
-  opacity: 0.90;
+  opacity: 0.85;
+  max-height: 7%
 }
 
 .navbar > .container,
