--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,4 +11,12 @@
             <span aria-hidden="true"></span>
         </a>
     </div>
+
+    <div id="navbarMenu" class="navbar-menu">
+        <div class="navbar-start">
+            <a class="navbar-item">Home</a>
+            <a class="navbar-item">Events</a>
+            <a class="navbar-item">Contact Us</a>
+        </div>
+    </div>
 </nav>
