--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,10 @@
-<!--Hero-->
-<section class="hero is-info is-fullheight is-bold">
+<html class="has-navbar-fixed-top">
+    <!--Hero-->
+    <section class="hero is-warning is-fullheight is-bold">
     <div class="hero-body">
         <div class="container">
-            <h1 class="title">Join the largest community for Catholics at UT Dallas.</h1>
+        <h1 class="title">Join the largest community for Catholics at UT Dallas.</h1>
         </div>
     </div>
-</section>
+    </section>
+</html>
