--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,22 +1,22 @@
 <!--Navbar-->
-<nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-        <a class="navbar-item" href="https://newmanutd.org">
-            <img src="../../../assets/ncm-logo.png" alt="Newman Catholic Ministry at UT Dallas">
-        </a>
-       
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-        </a>
-    </div>
+<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a class="navbar-item" href="https://newmanutd.org">
+      <img src="../../../assets/ncm-logo.png" alt="Newman Catholic Ministry at UT Dallas">
+    </a>
 
-    <div id="navbarMenu" class="navbar-menu">
-        <div class="navbar-start">
-            <a class="navbar-item">Home</a>
-            <a class="navbar-item">Events</a>
-            <a class="navbar-item">Contact Us</a>
-        </div>
+    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+
+  <div id="navbarMenu" class="navbar-menu">
+    <div class="navbar-start">
+      <a href="#" class="navbar-item">Home</a>
+      <a class="navbar-item">Events</a>
+      <a class="navbar-item">Contact Us</a>
     </div>
+  </div>
 </nav>
