Fixed hamburger menu not opening

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,6 @@
+<!--FontAwesome Icons-->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
+
 <!--Navbar-->
 <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
@@ -17,6 +20,11 @@
       <a href="#" class="navbar-item">Home</a>
       <a class="navbar-item">Events</a>
       <a class="navbar-item">Contact Us</a>
+    </div>
+    <div class="navbar-end">
+        <a href="http://bit.ly/join-ncm" class="navbar-item"><i class="fab fa-slack"></i></a>
+        <a href="https://www.instagram.com/ncm_utd/" class="navbar-item"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/utdcatholic" class="navbar-item"><i class="fab fa-facebook"></i></a>
     </div>
   </div>
 </nav>
