--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-navbar></app-navbar>
-<app-home></app-home>
-<app-footer></app-footer>
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+    </head>
+    <app-navbar></app-navbar>
+    <app-home></app-home>
+    <app-footer></app-footer>
+</html>
