Trying to make navbar transparent

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
 
 <!--Navbar-->
-<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+<nav class="navbar is-fixed-top is-transparent" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="https://newmanutd.org">
       <img src="../../../assets/ncm-logo.png" alt="Newman Catholic Ministry at UT Dallas">
@@ -19,7 +19,9 @@
     <div class="navbar-start">
       <a href="#" class="navbar-item">Home</a>
       <a class="navbar-item">Events</a>
-      <a class="navbar-item">Contact Us</a>
+      <a class="navbar-item">Support Us</a>
+      <a class="navbar-item">Get Involved</a>
+      <a class="navbar-item">About Us</a>
     </div>
     <div class="navbar-end">
         <a href="http://bit.ly/join-ncm" class="navbar-item"><i class="fab fa-slack"></i></a>
