--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+        <meta name="theme-color" content="#FFDD57">
     </head>
     <app-navbar></app-navbar>
     <app-home></app-home>
