Trying something with hero

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <html class="has-navbar-fixed-top">
     <!--Hero-->
-    <section class="hero is-warning is-fullheight is-bold">
+    <section class="hero is-warning is-fullheight is-bold is-fullheight-with-navbar">
     <div class="hero-body">
         <div class="container">
             <h1 class="title">Join the largest community for Catholics at UT Dallas.</h1>
