--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
 
 <!--Navbar-->
-<nav class="navbar is-fixed-top is-transparent" role="navigation" aria-label="main navigation">
+<nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="https://newmanutd.org">
       <img src="../../../assets/ncm-logo.png" alt="Newman Catholic Ministry at UT Dallas">
