--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <html class="has-navbar-fixed-top">
     <!--Hero-->
-    <section class="hero is-warning is-fullheight is-bold is-fullheight-with-navbar">
+    <section class="hero is-warning is-bold is-fullheight-with-navbar">
     <div class="hero-head">
             <app-navbar></app-navbar>
     </div>
