--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
-<html class="has-navbar-fixed-top">
+<html>
     <!--Hero-->
     <section class="hero is-warning is-bold is-fullheight-with-navbar">
-    <div class="hero-head" style="margin:0px">
+    <div class="hero-head">
             <app-navbar></app-navbar>
     </div>
     <div class="hero-body">
