--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,16 +1,15 @@
-<html>
-    <!--Hero-->
-    <section class="hero is-warning is-bold is-fullheight-with-navbar">
-    <div class="hero-head">
-            <app-navbar></app-navbar>
+<!--Hero with header and footer-->
+<section class="hero is-warning is-bold is-fullheight-with-navbar">
+<div class="hero-head">
+    <app-navbar></app-navbar>
+</div>
+ <div class="hero-body">
+    <div class="container">
+        <h1 class="title">Join the largest community for Catholics at UT Dallas.</h1>
     </div>
-    <div class="hero-body">
-        <div class="container">
-            <h1 class="title">Join the largest community for Catholics at UT Dallas.</h1>
-        </div>
-    </div>
-    <div class="hero-foot">
-        <app-footer></app-footer>
-    </div>
-    </section>
-</html>
+</div>
+<div class="hero-foot">
+    <app-footer></app-footer>
+</div>
+</section>
+
