Add more routing

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,11 +17,11 @@
 
   <div id="navbarMenu" class="navbar-menu">
     <div class="navbar-start">
-      <a href="#" class="navbar-item">Home</a>
-      <a class="navbar-item">Events</a>
-      <a class="navbar-item">Support Us</a>
-      <a class="navbar-item">Get Involved</a>
-      <a class="navbar-item">About Us</a>
+      <a routerLink="" class="navbar-item">Home</a>
+      <a routerLink="events" class="navbar-item">Events</a>
+      <a routerLink="support-ncm" class="navbar-item">Support Us</a>
+      <a routerLink="get-involved" class="navbar-item">Get Involved</a>
+      <a routerLink="about-ncm" class="navbar-item">About Us</a>
     </div>
     <div class="navbar-end">
         <a href="http://bit.ly/join-ncm" class="navbar-item"><i class="fab fa-slack"></i></a>
