--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <!--Hero with header and footer-->
-<section class="hero is-warning is-bold is-fullheight-with-navbar">
+<section class="hero is-warning is-bold is-large">
 <div class="hero-head">
     <app-navbar></app-navbar>
 </div>
