Fixed home component
Previously, because of the routing change, the homepage no longer showed up. Fixed in this commit.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
+<!--Navbar-->
+<app-navbar></app-navbar>
+
 <!--Hero with header and footer-->
 <section class="hero is-warning is-bold is-large">
-<div class="hero-head">
-    <app-navbar></app-navbar>
-</div>
  <div class="hero-body">
     <div class="container">
         <h1 class="title">Join the largest community for Catholics at UT Dallas.</h1>
