Footer and burger fix

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,8 +8,7 @@
         <h1 class="title">Join the largest community for Catholics at UT Dallas.</h1>
     </div>
 </div>
-<div class="hero-foot">
-    <app-footer></app-footer>
-</div>
 </section>
 
+<!--Footer-->
+<app-footer></app-footer>
