Fixed issue with clicking home

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
 
     <div id="navbarMenu" class="navbar-menu">
       <div class="navbar-start">
-        <a href="newmanutd.org" class="navbar-item">Home</a>
+        <a href="https://newmanutd.org" class="navbar-item">Home</a>
         <a routerLink="events" class="navbar-item">Events</a>
         <a routerLink="support-ncm" class="navbar-item">Support Us</a>
         <a routerLink="get-involved" class="navbar-item">Get Involved</a>
