--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,14 +1,18 @@
-<!--Navbar-->
-<app-navbar></app-navbar>
-
 <!--Hero with header and footer-->
 <section class="hero is-warning is-bold is-large">
- <div class="hero-body">
-    <div class="container">
-        <h1 class="title">Join the largest community for Catholics at UT Dallas.</h1>
+    <!--Navbar-->
+    <div class="hero-head">
+        <app-navbar></app-navbar>
     </div>
-</div>
+    <!--Body-->
+    <div class="hero-body">
+        <div class="container">
+            <h1 class="title">Join the largest community for Catholics at UT Dallas.</h1>
+        </div>
+    </div>
+    <div class="hero-foot">
+        <!--Footer-->
+        <app-footer></app-footer>
+    </div>
 </section>
 
-<!--Footer-->
-<app-footer></app-footer>
