--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,18 +1,20 @@
-<!--Hero with header and footer-->
-<section class="hero is-warning is-bold is-fullheight-with-navbar">
-    <!--Navbar-->
-    <div class="hero-head">
-        <app-navbar></app-navbar>
-    </div>
-    <!--Body-->
-    <div class="hero-body">
-        <div class="container">
-            <h1 class="title">Join the largest community for Catholics at UT Dallas.</h1>
+<body class="has-navbar-fixed-top">
+    <!--Hero with header and footer-->
+    <section class="hero is-warning is-bold is-fullheight-with-navbar">
+        <!--Navbar-->
+        <div class="hero-head">
+            <app-navbar></app-navbar>
         </div>
-    </div>
-    <div class="hero-foot">
-        <!--Footer-->
-        <app-footer></app-footer>
-    </div>
-</section>
+        <!--Body-->
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <h1 class="title">Join the largest community for Catholics at UT Dallas.</h1>
+            </div>
+        </div>
+        <div class="hero-foot is-fullwidth">
+            <!--Footer-->
+            <app-footer></app-footer>
+        </div>
+    </section>
+</body>
 
