Get footer out of the way

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <body class="has-navbar-fixed-top">
     <!--Hero with header and footer-->
-    <section class="hero is-warning is-bold is-fullheight-with-navbar">
+    <section class="hero is-warning is-bold is-fullheight">
         <!--Navbar-->
         <div class="hero-head">
             <app-navbar></app-navbar>
@@ -11,7 +11,7 @@
                 <h1 class="title">Join the largest community for Catholics at UT Dallas.</h1>
             </div>
         </div>
-        <div class="hero-foot is-fullwidth">
+        <div class="hero-foot">
             <!--Footer-->
             <app-footer></app-footer>
         </div>
