--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -2,23 +2,22 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
     <meta name="viewport" content="width: device-width, initial-scale=1">
 </head>
-
+    
 <body class="has-navbar-fixed-top">
-
+    
     <!--Navbar-->
     <app-navbar></app-navbar>
-
+    
     <!--Hero with header and footer-->
-    <section class="hero is-warning is-bold is-fullheight">
+    <section class="hero is-info is-bold is-fullheight">
         <!--Body-->
         <div class="hero-body">
             <div class="container has-text-centered">
-                <h1 class="title">Join the largest community for Catholics at UT Dallas.</h1>
+                <h1 class="title">This website is under construction</h1>
             </div>
         </div>
     </section>
-
+    
     <!--Footer-->
     <app-footer></app-footer>
 </body>
-
