--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
+<head>
+    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width: device-width, initial-scale=1">
+    <script src="./navbar/nav-burger.js"></script>
+</head>
 <!--Routes-->
 <router-outlet></router-outlet>
