--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,14 +8,14 @@
       <img src="../../../assets/ncm-logo.png" alt="Newman Catholic Ministry at UT Dallas">
     </a>
 
-    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
+    <a (click)="toggleNavbar()" role="button" #navBurger class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarMenu">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
     </a>
   </div>
 
-  <div id="navbarMenu" class="navbar-menu">
+  <div id="navbarMenu" class="navbar-menu" #navMenu>
     <div class="navbar-start">
       <a routerLink="/" class="navbar-item">Home</a>
       <a routerLink="/events" class="navbar-item">Events</a>
