--- a/src/app/components/events/events.component.sass
+++ b/src/app/components/events/events.component.sass
@@ -1,2 +1,12 @@
 body
     font-family: 'Rubik', sans-serif
+.is-event-header
+    font-size: 24px
+    font-weight: bold
+.is-event-footer
+    font-size: 12px
+.columns, .card
+    padding-top: 24px
+    padding-bottom: 24px
+#eventTmpl
+    display: none
