Added event location to template

--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -1,3 +1,6 @@
+<!--FontAwesome Icons-->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css">
+
 <head>
   <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
   <meta name="viewport" content="width: device-width, initial-scale=1">
@@ -17,14 +20,15 @@
           <div class="column has-text-centered">
             <img
               src="https://aleteiaen.files.wordpress.com/2016/05/web-eucharist-host-chalice-communion-sebastian-duda-shutterstock_217229680.jpg?quality=100&strip=all&w=620&h=310&crop=1"
-              alt="Eucharist" width="60%" height="60%">
+              alt="Eucharist" width="75%" height="75%" id="event-pic">
           </div>
           <div class="column">
             <p class="heading is-event-header has-text-centered" id="event-title">Event</p>
             <br>
-            <p class="has-text-centered" id="event-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+            <p class="has-text-centered" id="event-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <br>
             <p class="heading is-event-footer has-text-centered" id="event-date">December 25, 2019 @ 8-9 pm</p>
+            <p class="heading is-event-footer has-text-centered" id="event-loc"><i class="fas fa-map-marker-alt"></i><a href="https://www.google.com/maps/place/Residence+Hall+West/@32.990478,-96.7568509,17z/data=!3m1!4b1!4m5!3m4!1s0x864c2201603e1113:0xde7e44f6e5288438!8m2!3d32.990478!4d-96.7546622" id="event-loc-link"> Residence Hall West</a></p>
           </div>
         </div>
       </div>
