--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -23,12 +23,12 @@
               alt="Eucharist" width="75%" height="75%" id="event-pic">
           </div>
           <div class="column">
-            <p class="heading is-event-header has-text-centered" id="event-title">Event</p>
+            <p class="event-title heading is-event-header has-text-centered">Event</p>
             <br>
-            <p class="has-text-centered" id="event-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p class="event-desc has-text-centered">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <br>
-            <p class="heading is-event-footer has-text-centered" id="event-date"><i class="fas fa-calendar-alt"></i> December 25, 2019 @ 8-9 pm</p>
-            <p class="heading is-event-footer has-text-centered" id="event-loc"><i class="fas fa-map-marker-alt"></i><a href="https://www.google.com/maps/place/Residence+Hall+West/@32.990478,-96.7568509,17z/data=!3m1!4b1!4m5!3m4!1s0x864c2201603e1113:0xde7e44f6e5288438!8m2!3d32.990478!4d-96.7546622" id="event-loc-link"> Residence Hall West</a></p>
+            <p class="event-date heading is-event-footer has-text-centered"><i class="fas fa-calendar-alt"></i> December 25, 2019 @ 8-9 pm</p>
+            <p class="event-loc heading is-event-footer has-text-centered"><i class="fas fa-map-marker-alt"></i><a class="event-loc-link" href="https://www.google.com/maps/place/Residence+Hall+West/@32.990478,-96.7568509,17z/data=!3m1!4b1!4m5!3m4!1s0x864c2201603e1113:0xde7e44f6e5288438!8m2!3d32.990478!4d-96.7546622"> Residence Hall West</a></p>
           </div>
         </div>
       </div>
