JSON parser partially working

--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -12,15 +12,15 @@
   <!--Hero with header and footer-->
   <div class="container">
     <div class="section has-background-light">
-      <p class="title is-spaced has-text-centered">Events This Week</p>
+      <p class="title is-spaced has-text-centered">Upcoming Events</p>
       <br>
 
       <div class="box" id="eventTmpl">
         <div class="columns">
           <div class="column has-text-centered">
-            <img
+            <img class="event-pic"
               src="https://aleteiaen.files.wordpress.com/2016/05/web-eucharist-host-chalice-communion-sebastian-duda-shutterstock_217229680.jpg?quality=100&strip=all&w=620&h=310&crop=1"
-              alt="Eucharist" width="75%" height="75%" id="event-pic">
+              alt="Eucharist" width="75%" height="75%">
           </div>
           <div class="column">
             <p class="event-title heading is-event-header has-text-centered">Event</p>
