Fixed empty maps link

--- a/src/app/components/events/events.component.sass
+++ b/src/app/components/events/events.component.sass
@@ -10,7 +10,7 @@ body
     padding-bottom: 24px
 #eventTmpl
     display: none
-a, a:visited 
+.event-loc, .event-loc:visited 
     color: #808080
-a:hover 
+.event-loc:hover 
     color: #c2c2c2
