Events now start at id 0

--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -20,15 +20,18 @@
           <div class="column has-text-centered">
             <img class="event-pic"
               src="https://aleteiaen.files.wordpress.com/2016/05/web-eucharist-host-chalice-communion-sebastian-duda-shutterstock_217229680.jpg?quality=100&strip=all&w=620&h=310&crop=1"
-              alt="Eucharist" width="75%" height="75%">
+              width="75%" height="75%">
           </div>
           <div class="column">
             <p class="event-title heading is-event-header has-text-centered">Event</p>
             <br>
             <p class="event-desc has-text-centered">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <br>
-            <p class="event-date heading is-event-footer has-text-centered"><i class="fas fa-calendar-alt"></i> December 25, 2019 @ 8-9 pm</p>
-            <a class="event-loc heading is-event-footer has-text-centered" href="https://www.google.com/maps/place/Residence+Hall+West/@32.990478,-96.7568509,17z/data=!3m1!4b1!4m5!3m4!1s0x864c2201603e1113:0xde7e44f6e5288438!8m2!3d32.990478!4d-96.7546622"><i class="fas fa-map-marker-alt"></i>Residence Hall West</a>
+            <p class="event-date heading is-event-footer has-text-centered"><i class="fas fa-calendar-alt"></i> December
+              25, 2019 @ 8-9 pm</p>
+            <a class="event-loc heading is-event-footer has-text-centered"
+              href="https://www.google.com/maps/place/Residence+Hall+West/@32.990478,-96.7568509,17z/data=!3m1!4b1!4m5!3m4!1s0x864c2201603e1113:0xde7e44f6e5288438!8m2!3d32.990478!4d-96.7546622"><i
+                class="fas fa-map-marker-alt"></i>Residence Hall West</a>
           </div>
         </div>
       </div>
