Updated the look of the home screen

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -13,7 +13,7 @@
         <!--Body-->
         <div class="hero-body">
             <div class="container has-text-centered">
-                <h1 class="title">This website is under construction</h1>
+                <h1 class="title">We are the largest community for Catholics at UT Dallas.</h1>
             </div>
         </div>
     </section>
