--- a/src/app/components/home/home.component.sass
+++ b/src/app/components/home/home.component.sass
@@ -1,2 +1,18 @@
 body
   font-family: 'Rubik', sans-serif
+.tile-title 
+  margin: auto
+  text-align: center
+  color: white
+.hero
+  &.has-background
+    position: relative
+    overflow: hidden
+  &-background 
+    position: absolute
+    object-fit: cover
+    object-position: center center
+    width: 100%
+    height: 100%
+    &.is-transparent 
+      opacity: 0.3
