Updated about us page

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,23 +1,100 @@
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width: device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width: device-width, initial-scale=1">
 </head>
-    
+
 <body class="has-navbar-fixed-top">
-    
-    <!--Navbar-->
-    <app-navbar></app-navbar>
-    
-    <!--Hero with header and footer-->
-    <section class="hero is-info is-bold is-fullheight">
-        <!--Body-->
-        <div class="hero-body">
-            <div class="container has-text-centered">
-                <h1 class="title">We are the largest community for Catholics at UT Dallas.</h1>
-            </div>
-        </div>
-    </section>
-    
-    <!--Footer-->
-    <app-footer></app-footer>
+
+  <!--Navbar-->
+  <app-navbar></app-navbar>
+
+  <!--Hero with header and footer-->
+  <section class="hero is-info is-bold is-fullheight has-background">
+    <img class="hero-background is-transparent" src="../../../assets/about-ncm-cover.jpg">
+    <!--Body-->
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <h1 class="title">We are the largest community for Catholics at UT Dallas.</h1>
+      </div>
+    </div>
+  </section>
+
+  <br>
+
+  <div class="section notification is-light">
+    <p class="title is-spaced has-text-centered">Officers</p>
+    <div class="tile is-ancestor">
+      <div class="tile is-vertical is-parent">
+        <article class="tile is-child card">
+          <p class="title tile-title">Dylan Kreth</p>
+          <p class="subtitle">President</p>
+        </article>
+        <article class="tile is-child card">
+          <p class="title tile-title">Chijindu Iheanacho</p>
+          <p class="subtitle">Vice President</p>
+        </article>
+        <article class="tile is-child card">
+          <p class="title tile-title">Julia LaFond</p>
+          <p class="subtitle">Prayer Head</p>
+        </article>
+        <article class="tile is-child card">
+          <p class="title tile-title">Leo Dobson</p>
+          <p class="subtitle">Speaker Head</p>
+        </article>
+        <article class="tile is-child card">
+          <p class="title tile-title">Patrick Soisson</p>
+          <p class="subtitle">Social Head</p>
+        </article>
+        <article class="tile is-child card">
+          <p class="title tile-title">Josh Guzman</p>
+          <p class="subtitle">Service Head</p>
+        </article>
+        <article class="tile is-child card">
+          <div class="crop-image">
+            <img src="../../../assets/officer-pics/kevin-chen.jpg" alt="Tech Head" class="officer-pic">
+          </div>
+          <br>
+          <p class="title tile-title">Kevin Chen</p>
+          <p class="subtitle">Tech Head</p>
+        </article>
+        <article class="tile is-child card">
+          <p class="title tile-title">Summer Brown</p>
+          <p class="subtitle">Outreach Head</p>
+        </article>
+      </div>
+      <div class="tile is-vertical is-parent">
+        <article class="tile is-child card">
+          <p class="title tile-title">Kalebtina Asare-Frimpong</p>
+          <p class="subtitle">WSG Chair</p>
+        </article>
+        <article class="tile is-child card">
+          <p class="title tile-title">Montgomery Flores</p>
+          <p class="subtitle">MSG Chair</p>
+        </article>
+        <article class="tile is-child card">
+          <p class="title tile-title">Priyanka Prem</p>
+          <p class="subtitle">Media Chair</p>
+        </article>
+        <article class="tile is-child card">
+          <p class="title tile-title">Kaitlin Colby</p>
+          <p class="subtitle">Transportation Chair</p>
+        </article>
+        <article class="tile is-child card">
+          <p class="title tile-title">Preston Glenn</p>
+          <p class="subtitle">Sports Chair</p>
+        </article>
+        <article class="tile is-child card">
+          <p class="title tile-title">Ike Ekwueme</p>
+          <p class="subtitle">Music Ministry Chair</p>
+        </article>
+        <article class="tile is-child card">
+          <p class="title tile-title">Joseph Krueger</p>
+          <p class="subtitle">KoC Liaison</p>
+        </article>
+      </div>
+    </div>
+  </div>
+
+  <!--Footer-->
+  <app-footer></app-footer>
 </body>
