--- a/src/app/components/about-us/about-us.component.sass
+++ b/src/app/components/about-us/about-us.component.sass
@@ -1,2 +1,37 @@
 body
   font-family: 'Rubik', sans-serif
+.tile-title, .subtitle 
+  text-align: center
+.tile-title
+  font-size: 24px
+.subtitle
+  font-size: 16px
+.card
+  padding-top: 24px
+  padding-bottom: 24px
+.hero
+  &.has-background
+    position: relative
+    overflow: hidden
+  &-background 
+    position: absolute
+    object-fit: cover
+    object-position: center center
+    width: 100%
+    height: 100%
+    &.is-transparent 
+      opacity: 0.3
+.crop-image
+  width: 200px
+  height: 200px
+  overflow: hidden
+  border-radius: 50%
+  display: block
+  margin-left: auto
+  margin-right: auto
+.officer-pic
+  border-radius: 50%
+  box-shadow: 0 1px 3px rgba(0,0,0,.2), 0 1px 2px rgba(0,0,0,.2)
+  height: 100%
+  width: auto
+  object-fit: cover
