--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -11,7 +11,7 @@
   <app-navbar></app-navbar>
   <!--Hero with header and footer-->
   <div class="container">
-    <div class="section has-background-light">
+    <div class="section notification is-light">
       <p class="title is-spaced has-text-centered">Upcoming Events</p>
       <br>
 
