Fixed link with Support Us

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -28,7 +28,7 @@
         </a>
       </article>
       <article class="tile is-child notification is-danger">
-        <a routerLink="/support-us" style="text-decoration: none">
+        <a routerLink="/support-ncm" style="text-decoration: none">
           <p class="title tile-title">Support Us</p>
         </a>
       </article>
