Added headshots for most officers

--- a/src/app/components/events/events.component.html
+++ b/src/app/components/events/events.component.html
@@ -29,7 +29,7 @@
             <br>
             <p class="event-date heading is-event-footer has-text-centered"><i class="fas fa-calendar-alt"></i> December
               25, 2019 @ 8-9 pm</p>
-            <a class="event-loc heading is-event-footer has-text-centered"
+            <a class="event-loc heading is-event-footer has-text-centered" style="text-decoration:none"
               href="https://www.google.com/maps/place/Residence+Hall+West/@32.990478,-96.7568509,17z/data=!3m1!4b1!4m5!3m4!1s0x864c2201603e1113:0xde7e44f6e5288438!8m2!3d32.990478!4d-96.7546622"><i
                 class="fas fa-map-marker-alt"></i>Residence Hall West</a>
           </div>
