--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -26,26 +26,50 @@
     <div class="tile is-ancestor">
       <div class="tile is-vertical is-parent">
         <article class="tile is-child card">
+          <div class="crop-image">
+            <img src="../../../assets/officer-pics/dylan-kreth.jpg" alt="President" class="officer-pic">
+          </div>
+          <br>
           <p class="title tile-title">Dylan Kreth</p>
           <p class="subtitle">President</p>
         </article>
         <article class="tile is-child card">
+          <div class="crop-image">
+            <img src="../../../assets/officer-pics/chijindu-iheanacho.jpg" alt="Vice President" class="officer-pic">
+          </div>
+          <br>
           <p class="title tile-title">Chijindu Iheanacho</p>
           <p class="subtitle">Vice President</p>
         </article>
         <article class="tile is-child card">
+          <div class="crop-image">
+            <img src="../../../assets/officer-pics/julia-lafond.jpg" alt="Prayer Head" class="officer-pic">
+          </div>
+          <br>
           <p class="title tile-title">Julia LaFond</p>
           <p class="subtitle">Prayer Head</p>
         </article>
         <article class="tile is-child card">
+          <div class="crop-image">
+            <img src="../../../assets/officer-pics/leo-dobson.jpg" alt="Speaker Head" class="officer-pic">
+          </div>
+          <br>
           <p class="title tile-title">Leo Dobson</p>
           <p class="subtitle">Speaker Head</p>
         </article>
         <article class="tile is-child card">
+          <div class="crop-image">
+            <img src="../../../assets/officer-pics/patrick-soisson.jpg" alt="Social Head" class="officer-pic">
+          </div>
+          <br>
           <p class="title tile-title">Patrick Soisson</p>
           <p class="subtitle">Social Head</p>
         </article>
         <article class="tile is-child card">
+          <div class="crop-image">
+            <img src="../../../assets/officer-pics/josh-guzman.png" alt="Tech Head" class="officer-pic">
+          </div>
+          <br>
           <p class="title tile-title">Josh Guzman</p>
           <p class="subtitle">Service Head</p>
         </article>
@@ -58,6 +82,10 @@
           <p class="subtitle">Tech Head</p>
         </article>
         <article class="tile is-child card">
+          <div class="crop-image">
+            <img src="../../../assets/officer-pics/summer-brown.jpg" alt="Tech Head" class="officer-pic">
+          </div>
+          <br>
           <p class="title tile-title">Summer Brown</p>
           <p class="subtitle">Outreach Head</p>
         </article>
@@ -68,26 +96,50 @@
           <p class="subtitle">WSG Chair</p>
         </article>
         <article class="tile is-child card">
+          <div class="crop-image">
+            <img src="../../../assets/officer-pics/montgomery-flores.jpg" alt="Tech Head" class="officer-pic">
+          </div>
+          <br>
           <p class="title tile-title">Montgomery Flores</p>
           <p class="subtitle">MSG Chair</p>
         </article>
         <article class="tile is-child card">
+          <div class="crop-image">
+            <img src="../../../assets/officer-pics/priyanka-prem.jpg" alt="Tech Head" class="officer-pic">
+          </div>
+          <br>
           <p class="title tile-title">Priyanka Prem</p>
           <p class="subtitle">Media Chair</p>
         </article>
         <article class="tile is-child card">
+          <div class="crop-image">
+            <img src="../../../assets/officer-pics/kaitlin-colby.jpg" alt="Tech Head" class="officer-pic">
+          </div>
+          <br>
           <p class="title tile-title">Kaitlin Colby</p>
           <p class="subtitle">Transportation Chair</p>
         </article>
         <article class="tile is-child card">
+          <div class="crop-image">
+            <img src="../../../assets/officer-pics/preston-glenn.jpg" alt="Tech Head" class="officer-pic">
+          </div>
+          <br>
           <p class="title tile-title">Preston Glenn</p>
           <p class="subtitle">Sports Chair</p>
         </article>
         <article class="tile is-child card">
+          <div class="crop-image">
+            <img src="../../../assets/officer-pics/ike-ekwueme.jpg" alt="Tech Head" class="officer-pic">
+          </div>
+          <br>
           <p class="title tile-title">Ike Ekwueme</p>
           <p class="subtitle">Music Ministry Chair</p>
         </article>
         <article class="tile is-child card">
+          <div class="crop-image">
+            <img src="../../../assets/officer-pics/joseph-krueger.jpg" alt="Tech Head" class="officer-pic">
+          </div>
+          <br>
           <p class="title tile-title">Joseph Krueger</p>
           <p class="subtitle">KoC Liaison</p>
         </article>
