Updated about page with mission statement

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -15,6 +15,10 @@
     <div class="hero-body">
       <div class="container has-text-centered">
         <h1 class="title">We are the largest community for Catholics at UT Dallas.</h1>
+        <br>
+        <br>
+        <br>
+        <h2 class="subtitle">As Catholics at the University of Texas at Dallas, we seek to build up the Catholic community, reach out to Catholics on campus, and be the presence of Christ to those around us. To that purpose, we seek to sponsor events that proclaim the truths of our faith, offer opportunity for fellowship, and draw students deeper into a life of prayer, sacraments, and a relationship with Christ and His Church. We use our resources of time, talent, and treasure to promote and implement our missions and events.</h2>
       </div>
     </div>
   </section>
