--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,12 +10,13 @@
 
   <!--Hero with header and footer-->
   <section class="hero is-warning is-fullheight has-background">
-      <img class="hero-background is-transparent" src="../../../assets/home-cover.jpg">
+    <img class="hero-background is-transparent" src="../../../assets/home-cover.jpg">
     <!--Body-->
     <div class="hero-body">
       <div class="container has-text-centered">
-        <h1 class="title">"He is waiting for you when nothing else you find satisfies you."<br><br>- St. John Paul II
-        </h1>
+        <h1 class="title">He is waiting for you when nothing else you find satisfies you.</h1>
+        <br><br>
+        <h1 class="subtitle">- St. John Paul II</h1>
       </div>
     </div>
   </section>
