Updated the Get Involved page with social media links
Also removed social media links from navbar

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -25,6 +25,7 @@
 
   <br>
 
+  <!--Officers-->
   <div class="section notification is-light">
     <p class="title is-spaced has-text-centered">Officers</p>
     <div class="tile is-ancestor">
