--- a/src/app/components/get-involved/get-involved.component.html
+++ b/src/app/components/get-involved/get-involved.component.html
@@ -1,23 +1,147 @@
 <head>
-        <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
-        <meta name="viewport" content="width: device-width, initial-scale=1">
-    </head>
-    
-    <body class="has-navbar-fixed-top">
-    
-        <!--Navbar-->
-        <app-navbar></app-navbar>
-    
-        <!--Hero with header and footer-->
-        <section class="hero is-info is-bold is-fullheight">
-            <!--Body-->
-            <div class="hero-body">
-                <div class="container has-text-centered">
-                    <h1 class="title">This website is under construction</h1>
+  <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width: device-width, initial-scale=1">
+</head>
+
+<body class="has-navbar-fixed-top">
+
+  <!--Navbar-->
+  <app-navbar></app-navbar>
+
+  <!--Hero-->
+  <section class="hero is-light has-background is-fullheight">
+    <img class="hero-background is-transparent" src="../../../assets/get-involved-cover.jpg">
+    <!--Body-->
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <h1 class="title">Keep in touch with us to get information about events and happenings at the Newman Catholic
+          Ministry.
+        </h1>
+      </div>
+    </div>
+  </section>
+  <br>
+
+  <div class="section notification is-light">
+    <div class="tile is-ancestor">
+      <div class="tile is-parent is-vertical">
+        <article class="tile is-child card">
+          <div style="text-align:center">
+            <p class="title"><i class="fab fa-slack fa-3x" style="color:#23D160"></i></p>
+            <p class="title tile-title">Slack</p>
+            <p class="card-content">Slack is the official group chat for the organization, where we discuss Catholic topics, announce events, post Catholic memes, etc. Join the conversation!</p>
+            <a href="https://bit.ly/join-ncm" class="button is-success is-outlined" type="submit"><i class="fab fa-slack"></i>&nbsp;Join</a>
+          </div>
+        </article>
+        <article class="tile is-child card">
+          <div style="text-align:center">
+            <p class="title"><i class="fab fa-mailchimp fa-3x" style="color:#FFDD57"></i></p>
+            <p class="title tile-title">MailChimp</p>
+            <p class="card-content">Sign up for the mailing list to receive information about events.</p>
+            <!-- Begin Mailchimp Signup Form -->
+            <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+            <style type="text/css">
+              #mc_embed_signup {
+                background: #fff;
+                clear: left;
+                font: 14px Helvetica, Arial, sans-serif;
+              }
+
+              /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+
+            </style>
+            <div id="mc_embed_signup">
+              <form
+                action="https://firebaseapp.us19.list-manage.com/subscribe/post?u=c79e5bc5c739f88ffe8e41c40&amp;id=30d661d9d5"
+                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+
+                  <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                  <div class="mc-field-group">
+                    <label for="mce-FNAME">First Name </label>
+                    <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+                  </div>
+                  <div class="mc-field-group">
+                    <label for="mce-LNAME">Last Name </label>
+                    <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+                  </div>
+                  <div class="mc-field-group">
+                    <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+                    </label>
+                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                  </div>
+                  <div id="mce-responses" class="clear">
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
+                  </div>
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                      name="b_c79e5bc5c739f88ffe8e41c40_30d661d9d5" tabindex="-1" value=""></div>
+                  <div class="clear" style="text-align:center"><button type="submit" value="Subscribe" name="subscribe"
+                      id="mc-embedded-subscribe" class="button"><i class="fas fa-inbox"></i>&nbsp;Subscribe</button></div>
                 </div>
+              </form>
             </div>
-        </section>
-    
-        <!--Footer-->
-        <app-footer></app-footer>
-    </body>
+            <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+            <script type='text/javascript'>
+              (function ($) {
+                window.fnames = new Array();
+                window.ftypes = new Array();
+                fnames[1] = 'FNAME';
+                ftypes[1] = 'text';
+                fnames[2] = 'LNAME';
+                ftypes[2] = 'text';
+                fnames[0] = 'EMAIL';
+                ftypes[0] = 'email';
+                fnames[3] = 'ADDRESS';
+                ftypes[3] = 'address';
+                fnames[4] = 'PHONE';
+                ftypes[4] = 'phone';
+                fnames[5] = 'BIRTHDAY';
+                ftypes[5] = 'birthday';
+              }(jQuery));
+              var $mcj = jQuery.noConflict(true);
+
+            </script>
+            <!--End mc_embed_signup-->
+          </div>
+        </article>
+      </div>
+
+      <div class="tile is-parent is-vertical">
+        <article class="tile is-child card">
+          <div style="text-align:center">
+            <p class="title"><i class="fab fa-facebook fa-3x" style="color:#3273DC"></i></p>
+            <p class="title tile-title">Facebook</p>
+            <p class="card-content">The UTD Newman Catholic Ministry page is a way for students, alumni, parents, and
+              community members to stay up to date on NCM activities and events.</p>
+
+            <a href="https://www.facebook.com/utdcatholic/" class="button is-link is-outlined" type="submit"><i class="far fa-thumbs-up"></i>&nbsp;Like</a>
+          </div>
+        </article>
+        <article class="tile is-child card">
+          <div style="text-align:center">
+            <p class="title"><i class="fab fa-instagram fa-3x" style="color:#FF3860"></i></p>
+            <p class="title tile-title">Instagram</p>
+            <p class="card-content">See all of our past events on our Instagram page!</p>
+            <a href="https://instagram.com/ncm_utd/" class="button is-danger is-outlined" type="submit"><i class="fas fa-camera-retro"></i>&nbsp;Follow</a>
+          </div>
+        </article>
+        <article class="tile is-child card">
+          <div style="text-align:center">
+            <p class="title"><i class="fas fa-envelope fa-3x" style="color:#00D1B2"></i></p>
+            <p class="title tile-title">E-mail</p>
+            <p class="card-content">Have any further questions? Want to reach out to our student organization? E-mail
+              us!</p>
+            <a href="mailto:newmanutd@gmail.com" class="button is-primary is-outlined" type="submit"><i class="fas fa-paper-plane"></i>&nbsp;Message</a>
+          </div>
+        </article>
+      </div>
+    </div>
+  </div>
+
+  <!--Footer-->
+  <app-footer></app-footer>
+</body>
