--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,10 +8,9 @@
   <!--Navbar-->
   <app-navbar></app-navbar>
 
-  <!--Hero with header and footer-->
+  <!--Hero-->
   <section class="hero is-warning is-fullheight has-background">
     <img class="hero-background is-transparent" src="../../../assets/home-cover.jpg">
-    <!--Body-->
     <div class="hero-body">
       <div class="container has-text-centered">
         <h1 class="title">He is waiting for you when nothing else you find satisfies you.</h1>
@@ -20,7 +19,10 @@
       </div>
     </div>
   </section>
+
   <br>
+
+  <!--Navigation-->
   <div class="tile is-ancestor">
     <div class="tile is-vertical is-parent">
       <article class="tile is-child notification is-primary">
