--- a/src/app/components/about-us/about-us.component.sass
+++ b/src/app/components/about-us/about-us.component.sass
@@ -29,9 +29,12 @@ body
   display: block
   margin-left: auto
   margin-right: auto
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.6)
+  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.6)
+  -o-box-shadow: 0 0 10px  rgba(0,0,0,0.6)
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6)
 .officer-pic
   border-radius: 50%
-  box-shadow: 0 1px 3px rgba(0,0,0,.2), 0 1px 2px rgba(0,0,0,.2)
   height: 100%
   width: auto
   object-fit: cover
