Introduced fade-in effect for buttons

--- a/src/app/components/get-involved/get-involved.component.sass
+++ b/src/app/components/get-involved/get-involved.component.sass
@@ -9,6 +9,8 @@ body
 .card
   padding-top: 24px
   padding-bottom: 24px
+.button
+  transition: 0.3s
 .hero
   &.has-background
     position: relative
