--- a/src/app/components/get-involved/get-involved.component.html
+++ b/src/app/components/get-involved/get-involved.component.html
@@ -30,7 +30,7 @@
             <p class="title"><i class="fab fa-slack fa-3x" style="color:#23D160"></i></p>
             <p class="title tile-title">Slack</p>
             <p class="card-content">Slack is the official group chat for the organization, where we discuss Catholic topics, announce events, post Catholic memes, etc. Join the conversation!</p>
-            <a href="https://bit.ly/join-ncm" class="button is-success is-outlined" type="submit"><i class="fab fa-slack"></i>&nbsp;Join</a>
+            <a href="https://bit.ly/join-ncm" target="_blank" class="button is-success is-outlined" type="submit"><i class="fab fa-slack"></i>&nbsp;Join</a>
           </div>
         </article>
         <article class="tile is-child card">
@@ -118,7 +118,7 @@
             <p class="card-content">The UTD Newman Catholic Ministry page is a way for students, alumni, parents, and
               community members to stay up to date on NCM activities and events.</p>
 
-            <a href="https://www.facebook.com/utdcatholic/" class="button is-link is-outlined" type="submit"><i class="far fa-thumbs-up"></i>&nbsp;Like</a>
+            <a target="_blank" href="https://www.facebook.com/utdcatholic/" class="button is-link is-outlined" type="submit"><i class="far fa-thumbs-up"></i>&nbsp;Like</a>
           </div>
         </article>
         <article class="tile is-child card">
@@ -126,7 +126,7 @@
             <p class="title"><i class="fab fa-instagram fa-3x" style="color:#FF3860"></i></p>
             <p class="title tile-title">Instagram</p>
             <p class="card-content">See all of our past events on our Instagram page!</p>
-            <a href="https://instagram.com/ncm_utd/" class="button is-danger is-outlined" type="submit"><i class="fas fa-camera-retro"></i>&nbsp;Follow</a>
+            <a target="_blank" href="https://instagram.com/ncm_utd/" class="button is-danger is-outlined" type="submit"><i class="fas fa-camera-retro"></i>&nbsp;Follow</a>
           </div>
         </article>
         <article class="tile is-child card">
@@ -135,7 +135,7 @@
             <p class="title tile-title">E-mail</p>
             <p class="card-content">Have any further questions? Want to reach out to our student organization? E-mail
               us!</p>
-            <a href="mailto:newmanutd@gmail.com" class="button is-primary is-outlined" type="submit"><i class="fas fa-paper-plane"></i>&nbsp;Message</a>
+            <a target="_blank" href="mailto:newmanutd@gmail.com" class="button is-primary is-outlined" type="submit"><i class="fas fa-paper-plane"></i>&nbsp;Message</a>
           </div>
         </article>
       </div>
